portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: "asia-northeast1-docker.pkg.dev/irori-gcloud/irori-dev/portfolio:latest"
          ports:
            - containerPort: 80
              protocol: TCP
