portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: portfolio
  type: NodePort
