portfolio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: main-http
spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
      namespace: istio-gateway

  hostnames:
    - irori235.dev
  rules:
    - backendRefs:
        - name: portfolio
          port: 80
